[package]
name = "error-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-code-derive = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
http = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1"
backtrace = "0.3.71"
